# holap

exciter/: README  configure.ac
exciter/data/: Makefile.am
exciter/src/: Makefile.am  analogfilter.c  exciter.c  exciter.h  exciter_ui.cxx  exciter_ui.h  harmonic.c  main_ui.cpp  main_ui.h  recchord.c
goomf/: ChangeLog  README  configure.in
goomf/data/: Default.goomf  Makefile.am
goomf/src/: Makefile.am  analogfilter.c  goomf.c  goomf.h  goomf_ui.cxx  goomf_ui.fl  goomf_ui.h  main_ui.cpp  main_ui.h  synth.c
harmonizer/: README  configure.in
harmonizer/src/: Makefile.am  harmonizer.c  harmonizer.h  holharm.c  holharm_ui.cxx  holharm_ui.fl  holharm_ui.h  main_ui.cpp  main_ui.h  recchord.c  recognizenote.c
harmonizer_l/: ChangeLog  README  configure.in
harmonizer_l/metadata/: Makefile.am  scale_holharm_l.rdf
harmonizer_l/src/: Makefile.am  harmonizer.c  harmonizer.h  holharm_l.c  recchord.c  recognizenote.c  smbPitchShift.c
horgand-dssi/: ChangeLog  README  configure.in
horgand-dssi/data/: Accordion.horeb  Bank10.horeb  Bank11.horeb  Bank12.horeb  Bank13.horeb  Bank14.horeb  Bank15.horeb  Bank16.horeb  Bank17.horeb  Bank18.horeb  Bank19.horeb  Bank2.horeb  Bank20.horeb  Bank21.horeb  Bank22.horeb  Bank23.horeb  Bank3.horeb  Bank4.horeb  Bank5.horeb  Bank6.horeb  Bank7.horeb  Bank8.horeb  Bank9.horeb  Bass.horeb  Brass.horeb  Default.horeb  E_Piano_1.horeb  E_Piano_2.horeb  E_Piano_Fender_Rhodes1.horeb  E_Piano_Wurlitzer.horeb  Lead1.horeb  Lead2.horeb  Lead3.horeb  Makefile.am  Other.horeb  Pad.horeb  Strings.horeb  Synth.horeb
horgand-dssi/src/: Holrgan.h  Makefile.am  horgand.c  horgand128.xpm  horgand_ui.cxx  horgand_ui.fl  horgand_ui.h  main_ui.cpp  main_ui.h  organ.c  organDSPEffects.c  organFileIO.c  organvarios.c
musicaldelay/: README  configure.in
musicaldelay/metadata/: Makefile.am  musicaldelay.rdf  musicaldelay_scales.rdf
musicaldelay/src/: Makefile.am  mdelay.c  mdelay.h  musicaldelay.c
zynalienwah/: AUTHORS  README  configure.in
zynalienwah/metadata/: Makefile.am  zynalienwah.rdf
zynalienwah/src/: Makefile.am  alienwah.c  alienwah.h  effectlfo.c  zynalienwah.c
zynchorus/: README  configure.in
zynchorus/metadata/: Makefile.am  zynchorus.rdf
zynchorus/src/: Makefile.am  chorus.c  chorus.h  effectlfo.c  zynchorus.c
zyneq10band/: README  configure.in
zyneq10band/metadata/: Makefile.am  zyneq10band.rdf
zyneq10band/src/: Makefile.am  analogfilter.c  eq10.c  eq10.h  zyneq10band.c
zyneq3par/: Makefile.am  README  configure.in
zyneq3par/metadata/: Makefile.am  zyneq3par.rdf
zyneq3par/src/: Makefile.am  analogfilter.c  eq.c  eq.h  zyneq3par.c
zynphaser/: Makefile.am  README  configure.in
zynphaser/metadata/: Makefile.am  zynphaser.rdf
zynphaser/src/: Makefile.am  effectlfo.c  phaser.c  phaser.h  zynphaser.c
zynreverb/: README  configure.in
zynreverb/metadata/: Makefile.am  zynreverb.rdf
zynreverb/src/: Makefile.am  analogfilter.c  reverb.c  reverb.h  zynreverb.c
