datadir = $(prefix)/share/${PACKAGE}
data_DATA = Default.horeb \
	Bank2.horeb \
	Bank3.horeb \
	Bank4.horeb \
	Bank5.horeb \
	Bank6.horeb \
	Bank7.horeb \
	Bank8.horeb \
	Bank9.horeb \
	Bank10.horeb \
	Bank11.horeb \
	Bank12.horeb \
	Bank13.horeb \
	Bank14.horeb \
	Bank15.horeb \
	Bank16.horeb \
	Bank17.horeb \
	Bank18.horeb \
	Bank19.horeb \
	Bank20.horeb \
	Bank21.horeb \
	Bank22.horeb \
	Bass.horeb \
	Synth.horeb \
	Strings.horeb \
	Brass.horeb \
        Lead1.horeb \
        Lead2.horeb \
        Lead3.horeb \
        Other.horeb \
        Pad.horeb \
        E_Piano_1.horeb \
        E_Piano_2.horeb \
        E_Piano_Wurlitzer.horeb \
	E_Piano_Fender_Rhodes1.horeb \
	Accordion.horeb \
	knob.png

EXTRA_DIST = $(data_DATA)
 